# zc-loader

./: .gitignore  README.md
bench/: bench_io.rs  bench_python.py  run_bench.sh
python-bindings/: Cargo.toml  pyproject.toml
python-bindings/python/zero_copy_loader/: __init__.py
python-bindings/src/: lib.rs
rust-core/: Cargo.toml
rust-core/src/: buffer.rs  format.rs  lib.rs  mmap.rs  prefetch.rs  reader.rs
