[package]
name = "zero_copy_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zero_copy_loader"
crate-type = ["cdylib"]

[dependencies]
rust-core = { path = "../rust-core" }
pyo3 = { version = "0.27", features = ["auto-initialize"] }
