[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
io-uring = { version = "0.6", optional = true }
libc = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"

[features]
default = ["io_uring"]
io_uring = ["io-uring"]

[[bin]]
name = "bench_io"
path = "src/bin/bench_io.rs"

[dev-dependencies]
tempfile = "3.8"
